fix exprest package

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "checkit": "^0.7.0",
     "cors": "^2.8.1",
     "express": "^4.14.0",
-    "exprest": "^0.1.0",
+    "exp-rest": "^0.1.0",
     "knex": "^0.12.6",
     "lodash": "^4.16.6",
     "moment": "^2.16.0",
